@@ -70,12 +70,13 @@ namespace MigSharp
         /// Executes all pending migrations found in <paramref name="assembly"/>.
         /// </summary>
         /// <param name="assembly">The assembly to search for migrations.</param>
-        public void MigrateAll(Assembly assembly) // signature used in a Wiki example
+        /// <param name="additionalAssemblies">Optional assemblies that hold additional migrations.</param>
+        public void MigrateAll(Assembly assembly, params Assembly[] additionalAssemblies) // signature used in a Wiki example
         {
             DateTime start = DateTime.Now;
             Log.Info("Migrating all...");
 
-            IMigrationBatch batch = FetchMigrations(assembly);
+            IMigrationBatch batch = FetchMigrations(assembly, additionalAssemblies);
             batch.Execute();
 
             Log.Info(LogCategory.Performance, "All migration(s) took {0}s", (DateTime.Now - start).TotalSeconds);
@@ -86,12 +87,13 @@ namespace MigSharp
         /// </summary>
         /// <param name="assembly"></param>
         /// <param name="timestamp"></param>
-        public void MigrateTo(Assembly assembly, long timestamp)
+        /// <param name="additionalAssemblies">Optional assemblies that hold additional migrations.</param>
+        public void MigrateTo(Assembly assembly, long timestamp, params Assembly[] additionalAssemblies)
         {
             DateTime start = DateTime.Now;
             Log.Info("Migrating to {0}...", timestamp);
 
-            IMigrationBatch batch = FetchMigrationsTo(assembly, timestamp);
+            IMigrationBatch batch = FetchMigrationsTo(assembly, timestamp, additionalAssemblies);
             batch.Execute();
 
             Log.Info(LogCategory.Performance, "Migration(s) to {0} took {1}s", timestamp, (DateTime.Now - start).TotalSeconds);
@@ -101,9 +103,10 @@ namespace MigSharp
         /// Retrieves all pending migrations.
         /// </summary>
         /// <param name="assembly">The assembly that contains the migrations.</param>
-        public IMigrationBatch FetchMigrations(Assembly assembly)
+        /// <param name="additionalAssemblies">Optional assemblies that hold additional migrations.</param>
+        public IMigrationBatch FetchMigrations(Assembly assembly, params Assembly[] additionalAssemblies)
         {
-            return FetchMigrationsTo(assembly, long.MaxValue);
+            return FetchMigrationsTo(assembly, long.MaxValue, additionalAssemblies);
         }
 
         /// <summary>
@@ -112,15 +115,17 @@ namespace MigSharp
         /// <param name="assembly">The assembly that contains the migrations.</param>
         /// <param name="timestamp">The timestamp to migrate to.</param>
         /// <exception cref="IrreversibleMigrationException">When the migration path would require downgrading a migration which is not reversible.</exception>
-        public IMigrationBatch FetchMigrationsTo(Assembly assembly, long timestamp)
+        /// <param name="additionalAssemblies">Optional assemblies that hold additional migrations.</param>
+        public IMigrationBatch FetchMigrationsTo(Assembly assembly, long timestamp, params Assembly[] additionalAssemblies)
         {
             // collect all migrations
             DateTime start = DateTime.Now;
-            List<MigrationInfo> migrations = CollectAllMigrationsForModule(assembly, _options.ModuleSelector);
+            IEnumerable<Assembly> assemblies = new[] { assembly }.Concat(additionalAssemblies);
+            List<MigrationInfo> migrations = CollectAllMigrationsForModule(assemblies, _options.ModuleSelector);
             Log.Verbose(LogCategory.Performance, "Collecting migrations took {0}s", (DateTime.Now - start).TotalSeconds);
 
             // initialize versioning component
-            IVersioning versioning = InitializeVersioning(assembly);
+            IVersioning versioning = InitializeVersioning(assemblies);
 
             // filter applicable migrations)
             if (migrations.Count > 0)
@@ -160,12 +165,13 @@ namespace MigSharp
         /// Checks if any migrations are pending to be performed.
         /// </summary>
         /// <param name="assembly">The assembly that contains the migrations.</param>
-        public bool IsUpToDate(Assembly assembly)
+        /// <param name="additionalAssemblies">Optional assemblies that hold additional migrations.</param>
+        public bool IsUpToDate(Assembly assembly, params Assembly[] additionalAssemblies)
         {
-            return FetchMigrations(assembly).Count == 0;
+            return FetchMigrations(assembly, additionalAssemblies).Count == 0;
         }
 
-        private IVersioning InitializeVersioning(Assembly assembly)
+        private IVersioning InitializeVersioning(IEnumerable<Assembly> assemblies)
         {
             IVersioning versioning;
             if (_customVersioning != null)
@@ -177,14 +183,14 @@ namespace MigSharp
                 var v = new Versioning(_connectionInfo, _dbConnectionFactory, _provider, _providerMetadata, _options.VersioningTableName);
                 if (_customBootstrapper != null && !v.VersioningTableExists)
                 {
-                    ApplyCustomBootstrapping(v, assembly);
+                    ApplyCustomBootstrapping(v, assemblies);
                 }
                 versioning = v;
             }
             return versioning;
         }
 
-        private void ApplyCustomBootstrapping(Versioning versioning, Assembly assembly)
+        private void ApplyCustomBootstrapping(Versioning versioning, IEnumerable<Assembly> assemblies)
         {
             using (IDbConnection connection = _dbConnectionFactory.OpenConnection(_connectionInfo))
             {
@@ -193,7 +199,7 @@ namespace MigSharp
                     _customBootstrapper.BeginBootstrapping(connection, transaction);
 
                     // bootstrapping is a "global" operation; therefore we need to call IsContained on *all* migrations
-                    var allMigrations = CollectAllMigrationsForModule(assembly, s => true)
+                    var allMigrations = CollectAllMigrationsForModule(assemblies, s => true)
                         .Select(m => m.Metadata);
                     var migrationsContainedAtBootstrapping = from m in allMigrations
                                                              where _customBootstrapper.IsContained(m)
@@ -230,10 +236,14 @@ namespace MigSharp
             _customBootstrapper = customBootstrapper;
         }
 
-        private static List<MigrationInfo> CollectAllMigrationsForModule(Assembly assembly, Predicate<string> includeModule)
+        private static List<MigrationInfo> CollectAllMigrationsForModule(IEnumerable<Assembly> assemblies, Predicate<string> includeModule)
         {
-            Log.Info("Collecting all migrations from assembly {0}...", assembly.FullName);
-            var catalog = new AssemblyCatalog(assembly);
+            var catalog = new AggregateCatalog();
+            foreach (var assembly in assemblies)
+            { 
+                Log.Info("Collecting all migrations from assembly {0}...", assembly.FullName);
+                catalog.Catalogs.Add(new AssemblyCatalog(assembly));
+            } 
             var container = new CompositionContainer(catalog);
             var migrationImporter = new MigrationImporter();
             container.ComposeParts(migrationImporter);
