@@ -1,4 +1,5 @@
 1.1.0 - Added support for SQLite
+      - Added support for retrieving migrations from multiple assemblies (thanks to FlorianHoornaar)
       - Int64 can be used as data type in primary keys
 	  - Restricted usage of .AsIdentity() to Int32 and Int64 data typed columns
 	  - Removed .AsIdentity() option when adding columns (was not implemented consistently and was missing integration testing and constitues a super special-case which is hard to implement consistently for all platforms)
